<resources>
    <string name="app_name">KUCSA APP</string>
    <string name="contacts">Contacts</string>
    <string name="new_message">New Message</string>
    <string name="new_event">New Event</string>
    <string name="kucsa">KUCSA</string>
    <string name="events">Events</string>
    <string name="sentbox">SentBox</string>
    <string name="outbox">Outbox</string>
    <string name="inbox">Inbox</string>
    <string name="registered_contacts">Registered Contacts</string>
    <string name="no_contacts_available">No Contacts Available</string>
    <string name="username">Username</string>
    <string name="_3_1">3.1</string>
    <string name="applied_computer_science">Applied Computer Science</string>
    <string name="_0748267133">0748267133</string>
    <string name="in14_20516_17">IN14/20516/17</string>
    <string name="new_contact">Add New</string>
    <string name="phone_number">Phone Number</string>
    <string name="reg_number">Registration Number</string>
    <string name="course">Course</string>
    <string name="year_of_study">Year Of Study</string>
    <string name="date_of_reg">Date Of Registration (dd/mm/yyyy)</string>
    <string name="add_new_contact">Add New User</string>
    <string name="no_messages_available_for_this_category">No Messages Available For This Category</string>
    <string name="send_bulk_sms">Send Bulk Sms</string>
    <string name="prompt"><![CDATA[This apps need permission to send sms. Click \"Take Me To Settings\">>Permissions>>Enable For SMS]]></string>
    <string name="type_your_message_here">Type the message here</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="app">APP</string>
    <string name="communicate">Communicate</string>
    <string name="voting">Voting System</string>
    <string name="feedback">Feedback and Support</string>
</resources>
