<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:layout_margin="5dp"
    android:paddingBottom="10dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/account"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:id="@+id/userName"
        android:layout_marginStart="30dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#B8C0E9"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/_3_1"
        android:layout_marginLeft="30dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/Year"/>

</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/applied_computer_science"
        android:layout_marginTop="10dp"
        android:id="@+id/course"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/_0748267133"
        android:id="@+id/phone"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/in14_20516_17"
            android:gravity="end"
            android:textColor="#D5F8D6"
            android:id="@+id/regNo"
            android:layout_marginRight="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_marginEnd="10dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/regDate"
        android:visibility="gone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ID"
        android:visibility="gone"/>


</LinearLayout>