<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        style="@style/AppTheme.AppBarOverlay"

        android:id="@+id/appbar"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:background="@color/colorblue">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_contact"
                android:textColor="@color/colorwhite"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/appbar"
        android:background="@drawable/card_background"
        android:layout_margin="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorwhite"
            android:layout_margin="15dp"
            android:id="@+id/phoneno"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/colorwhite"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorwhite"
            android:layout_margin="15dp"
            android:hint="@string/reg_number"
            android:id="@+id/reg"
            android:inputType="textCapCharacters"
            android:textColor="@color/colorwhite"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorwhite"
            android:layout_margin="15dp"
            android:hint="@string/username"
            android:id="@+id/user"
            android:inputType="textPersonName"
            android:textColor="@color/colorwhite"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorwhite"
            android:layout_margin="15dp"
            android:id="@+id/course"
            android:hint="@string/course"
            android:inputType="text"
            android:textColor="@color/colorwhite"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorwhite"
            android:layout_margin="15dp"
            android:hint="@string/year_of_study"
            android:inputType="numberDecimal"
            android:id="@+id/yearof"
            android:textColor="@color/colorwhite"/>

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/colorwhite"
            android:layout_margin="15dp"
            android:id="@+id/datereg"
            android:hint="@string/date_of_reg"
            android:inputType="date"
            android:textColor="@color/colorwhite"/>


    </LinearLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
       <com.google.android.material.floatingactionbutton.FloatingActionButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="end|bottom"
           android:padding="20dp"
           android:src="@drawable/chevron_right_circle"
           app:fabSize="auto"
          app:backgroundTint="@color/colorblue"
           app:elevation="6dp"
           app:borderWidth="0dp"
           android:id="@+id/save"
           android:layout_margin="20dp"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</RelativeLayout>