<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    android:background="@color/colorwhite"
    tools:context=".Activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        style="@style/AppTheme.AppBarOverlay"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:id="@+id/toolbar"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:background="@color/colorblue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kucsa"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"/>

    </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        android:id="@+id/tabs">



   <TextView
       android:layout_width="0dp"
       android:layout_height="210dp"
       android:text="@string/inbox"
       android:background="@drawable/card_background"
       app:layout_columnWeight="1"
       app:layout_gravity="fill_horizontal"
       android:gravity="center"
       android:textStyle="bold"
       android:clickable="true"
       android:id="@+id/inbox"
       android:textColor="@color/colorwhite"
       android:layout_margin="5dp"
       android:textAppearance="@style/TextAppearance.AppCompat.Large"
       android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:text="@string/outbox"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:textStyle="bold"
            android:id="@+id/outbox"
            android:clickable="true"
            android:textColor="@color/colorwhite"
            android:layout_margin="5dp"
            android:background="@drawable/card_background"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:text="@string/sentbox"
            android:textColor="@color/colorwhite"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:background="@drawable/card_background"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:clickable="true"
            android:id="@+id/sentbox"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:focusable="true" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="210dp"
            android:text="@string/events"
            android:id="@+id/events"
            android:textColor="@color/colorwhite"
            android:layout_margin="5dp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            app:layout_columnWeight="1"
            android:background="@drawable/card_background"
            app:layout_gravity="fill_horizontal"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:id="@+id/bottomnav"
            android:background="@color/colorblue"
            app:menu="@menu/bottom_nav_menu">


        </com.google.android.material.bottomnavigation.BottomNavigationView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>